# djang-react-push-notifications-simple

./: .gitignore  README.md  main.py  pyproject.toml
backend_django/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend_django/core/: settings.py  urls.py
backend_django/device/: admin.py  firebase_push_api.py  models.py  selectors.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend_django/device/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/public/: firebase-messaging-sw.js  manifest.json
frontend/src/: App.js  messaging_init_in_sw.js
